--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-MONGO_URL="mongodb+srv://ravisharma:Ravi9818@cluster0.xsyqw.mongodb.net/Blogproject"
+MONGO_URL="mongodb+srv://Functionup-cohort:VuU3BF85dJfPhnHa@cluster0.vgm0kds.mongodb.net/Blogproject"
 
 PASS_SEC=`lama`
 
