--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
