--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-MONGO_URL="mongodb+srv://Functionup-cohort:VuU3BF85dJfPhnHa@cluster0.vgm0kds.mongodb.net/Blogproject"
+MONGO_URL="mongodb+srv://Arman:W0ZPcEp2jiZXKgid@cluster0.ilfh6.mongodb.net/project-1"
 
 PASS_SEC=`lama`
 
