--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
   "homepage": "https://github.com/rvsharma9818/BlogProject#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.16"
+    "validator": "^13.7.0"
   }
 }
