--- a/.env
+++ b/.env
@@ -1,17 +1,10 @@
 PORT=3000
 
-MONGO_URL="mongodb+srv://Functionup-cohort:VuU3BF85dJfPhnHa@cluster0.vgm0kds.mongodb.net/Blogproject"
+MONGO_URL=""
 
 PASS_SEC=`lama`
 
 JWT_SEC=lama
 
-CLOUDINARY_URL=cloudinary://216547374876993:uxBsDi_tkudTdu-opYaJ8TiEjEo@dyi6wxu59
-
 JWT_EXPIRES =6d
 
-CLOUDINARY_USER_NAME = dyi6wxu59
-
-CLOUDINARY_API_KEY =216547374876993
-
-CLOUDINARY_API_SECRET = uxBsDi_tkudTdu-opYaJ8TiEjEo
