--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 PORT=3000
 
-MONGO_URL=""
-
-PASS_SEC=`lama`
+MONGO_URL="mongodb+srv://Arman:W0ZPcEp2jiZXKgid@cluster0.ilfh6.mongodb.net/project-1"
 
 JWT_SEC=lama
 
